@@ -8,7 +8,7 @@ Documentation for rpy2
       This documentation describe the rpy2 package version |version| on |today|.
       The API is still changing with time, but snapshots should be good enough
       for a number of applications. This is believed to be already better than the 
-      released 2.0.x branch.
+      released 2.1.x branch.
       
       Although care is taken to keep the development branch functional
       at all times, and this documentation up-to-date, temporary issues may appear:
