@@ -18,6 +18,9 @@ New Features
 
 - module :mod:`rpy2.robjects.help` to expose the R help system to Python
 
+- Metaclass utilities in :mod:`rpy2.robjects.methods`, allowing to reflect
+  automatically R S4 classes as Python classes.
+
 :mod:`rpy2.rinterface`:
 
 - NA_Complex and :class:`NAComplexType` for missing complex values.
